--- a/index.html
+++ b/index.html
@@ -21,19 +21,65 @@
   </head>
   <body class="debu">
     <main>
-      <section id="customers_stories">
+      <section id="customers_stories" class="text-center p_h30">
+        <h6 class="title">INNOVATIVE BUSINESSES TRUST DIGITALOCEAN</h6>
+        <div class="flex_container p_h30">
+          <img class="customers_logo" src="img/docker_logo.svg" alt="">
+          <img class="customers_logo" src="img/slack_logo.svg" alt="">
+          <img class="customers_logo" src="img/gitLab_logo.svg" alt="">
+          <img class="customers_logo" src="img/hashiCorp_logo.svg" alt="">
+          <img class="customers_logo" src="img/splunk_logo.svg" alt="">
+          <img class="customers_logo" src="img/wework_logo.svg" alt="">
+        </div>
+        <a href="#">View customers stories ></a>
+      </section>
+      <section id="deploy">
+        <div class="deploy_title container">
+          <h2>Deploy and scale seamlessly</h2>
+          <p>Our optimized configuration process saves your team time when running and scaling distributed applications, AI & machine learning workloads, hosted services, client websites, or CI/CD environments.</p>
+        </div>
         <div class="flex_container">
-          <h6 class="title p_h30">INNOVATIVE BUSINESSES TRUST DIGITALOCEAN</h6>
-          <div class="customers_logo">
-            <img src="img/docker_logo.svg" alt="">
-            <img src="img/slack_logo.svg" alt="">
-            <img src="img/gitLab_logo.svg" alt="">
-            <img src="img/hashiCorp_logo.svg" alt="">
-            <img src="img/splunk_logo.svg" alt="">
-            <img src="img/wework_logo.svg" alt="">
+          <div class="deploy_nav p_h30">
+            <ul class="deploy_list list-unstyled text-uppercase">
+              <li>
+                <a href="#">deploy</a>
+              </li>
+              <li>
+                <a href="#">manage</a>
+              </li>
+              <li>
+                <a href="#">secure</a>
+              </li>
+              <li>
+                <a href="#">scale</a>
+              </li>
+              <li>
+                <a href="#">monitor</a>
+              </li>
+            </ul>
           </div>
-          <a class="p_h30" href="#">View customers stories ></a>
-
+          <div class="deploy_main p_h30">
+            <div class="deploy_steps">
+              <img src="img/cluster-deploy.svg" alt="">
+              <h5>Flexible compute types</h5>
+              <p>With Basic, General Purpose, Lorem ipsum dolor sit amet, c</p>
+            </div>
+            <div class="deploy_steps">
+              <img src="img/optimized-compute.svg" alt="">
+              <h5>Flexible compute types</h5>
+              <p>With Basic, General Purpose, Lorem ipsum dprehenderit. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit Lorem ipsum dolor sit amet, c,Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed  anim id est laborum.</p>
+            </div>
+            <div class="deploy_steps">
+              <img src="img/one-click.svg" alt="">
+              <h5>Flexible compute types</h5>
+              <p>With Basic, General Purpose, Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet, c,Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed ,Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+            </div>
+            <div class="deploy_steps">
+              <img src="img/global.svg" alt="">
+              <h5>Flexible compute types</h5>
+              <p>With Basic, General Purpose,do eiusmod tempor incididunt ut labore et doloreerit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa .</p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
